Modified profile view and route

--- a/views/partials/menu.handlebars
+++ b/views/partials/menu.handlebars
@@ -66,9 +66,9 @@
 	<div class="top-bar-right">
 		<ul class="dropdown menu" data-responsive-menu="drilldown medium-dropdown">
 			<li>
-				<a href="/articles/list">Browse</a>
+				<a href="/profiles">Browse</a>
 				<ul class="menu vertical">
-					<li><a href="/articles/list">Articles</a></li>
+					<li><a href="/profiles">Articles</a></li>
 				</ul>
 			</li>
 			<li>
