--- a/views/partials/menu.handlebars
+++ b/views/partials/menu.handlebars
@@ -29,7 +29,7 @@
 			<li>
 				<a href="/profiles">Browse</a>
 				<ul class="menu vertical">
-					<li><a href="/profiles">Articles</a></li>
+					<li><a href="/profiles">Manage Profiles</a></li>
 				</ul>
 			</li>
 			<li>
@@ -68,7 +68,7 @@
 			<li>
 				<a href="/profiles">Browse</a>
 				<ul class="menu vertical">
-					<li><a href="/profiles">Articles</a></li>
+					<li><a href="/profiles">Manage Profiles</a></li>
 				</ul>
 			</li>
 			<li>
