Modified non-authenticated view

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,7 @@
 <div class="row">
+  <h4 class="header">{{header}}</h4>
   <div class="left-floater">
-    <h4 class="header">Vestibulum viverra rutrum</h4>
+    <h4 class="sub-header">Vestibulum viverra rutrum</h4>
     <p>
       Arcu amet pede sed porta velit quisque vitae leo nascetur egestas condimentum.
       Sed volutpat dapibus nec ultrices lorem sem amet neque. Mauris lobortis lacus.
@@ -15,7 +16,7 @@
   </div>
 
   <div class="right-floater">
-    <h4 class="header">Maecenas congue velit</h4>
+    <h4 class="sub-header">Maecenas congue velit</h4>
     <p>
       Nullam aliquet dolor ante erat orci suspendisse nec rutrum varius inventore turpis.
       Facilisi venenatis sapien. Nulla congue ornare. Hac mauris sapien. Phasellus morbi a.
