--- a/public/css/app.css
+++ b/public/css/app.css
@@ -36,6 +36,14 @@ body {
 	color: rgb(7,7,100);
 }
 
+.sub-header {
+	font-weight: bold;
+	font-family: fantasy, georgia, serif, "sans serif", inherit;
+	font-size: 28pt;
+	text-align: center;
+	color: rgb(79,125,100);
+}
+
 .form {
 	margin-left: auto;
 	margin-right: auto;
