--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,7 +1,7 @@
 <div class="container">
   <h2 class="header">{{header}}</h2>
   <div class="row left-floater">
-    <h4 class="header">Lorem ipsum dolor sit amet</h4>
+    <h4 class="sub-header">Lorem ipsum dolor sit amet</h4>
     <p>Cconsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
@@ -9,7 +9,7 @@
     </p>
   </div>
     <div class="row right-floater">
-      <h4 class="header">Queueb &copy;<span class="primary-test">2017</span></h4>
+      <h4 class="sub-header">Queueb &copy; <span class="primary-test">2017</span></h4>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
