--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,5 +1,19 @@
 <div class="row">
-  <div class="center-floater">
+  <div class="left-floater">
+    <h4 class="sub-header">Map Our Location</h4>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3058.5084737089737!2d-75.16578828442717!3d39.952382991672145!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6a1a0d0bbbfc9%3A0x9b6b64e3977584e5!2sPhiladelphia+City+Hall!5e0!3m2!1sen!2sus!4v1496952436281" width="600" height="450" class="map" frameborder="0" style="border:0" allowfullscreen></iframe>
+  </div>
+
+  <div class="right-floater">
+    <h4 class="sub-header">Consectetur adipisicing elit</h4>
+    <p>
+      Lorem ipsum dolor sit amet, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    </p>
+
+    <p>
+     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+   </p>
   </div>
 </div>
