--- a/views/partials/searchProfiles.handlebars
+++ b/views/partials/searchProfiles.handlebars
@@ -8,7 +8,7 @@
 
 <div class="input-group">
 	<input type="radio" name="type" class="input-group-field show" value="title" checked> Search by title  &nbsp;&nbsp;
-	<input type="radio" name="type" class="input-group-field show" value="date"> Search by date
+	<input type="radio" name="type" class="input-group-field show" value="organization"> Search by organization
 </div>
 
 <div class="input-group-button">
