--- a/views/profiles/edit.hbs
+++ b/views/profiles/edit.hbs
@@ -66,9 +66,9 @@
 
 		<input type="hidden" name="author" class="input-group-field" required>
 
-		<div class="input-group-button">
-			<input type="submit" class="button left-floater" value="Submit">
-			<a href="#" class="button success right-floater cancel-edit">Cancel</a>
+		<div class="input-group-button clearfix">
+			<input type="submit" class="button left-floater edit-profile" value="Submit">
+			<input type="button" data-id="{{profile.id}}" class="button success right-floater cancel-edit" value="Cancel">
 		</div>
 
 	</form>
