Modified profile view and route

--- a/views/profiles/profile.hbs
+++ b/views/profiles/profile.hbs
@@ -22,6 +22,8 @@
 				Organization: {{profile.organization}}
 				</br>
 				Posted: {{profile.postDate}} @ {{profile.postTime}}
+				</br>
+				Author: {{profile.user}}
 			</p>
 		</div>
 
