--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="small-12 medium-12 large-12 columns">
-        <h4 style="text-align:center;">Error</h4>
+        <h4 style="text-align:center;" class="header">Error</h4>
         <p>{{error}}</p>
     </div>
 </div>
