Modified user profile view

--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -32,7 +32,11 @@
 					<div class="right-floater">
 						<div class="card" style="margin:25px;">
 							<div class="card-section">
-								<b>{{uname}}</b>
+								<p>
+                  <b>First Name: </b> &nbsp; {{fname}}</br>
+                  <b>Last Name: </b> &nbsp; {{lname}}</br> 
+                  <b>Username: </b> &nbsp;{{uname}}
+                </p>
 							</div>
 
 							<div class="card-divider">
