Modified user profile view

--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -34,13 +34,13 @@
 							<div class="card-section">
 								<p>
                   <b>First Name: </b> &nbsp; {{fname}}</br>
-                  <b>Last Name: </b> &nbsp; {{lname}}</br> 
+                  <b>Last Name: </b> &nbsp; {{lname}}</br>
                   <b>Username: </b> &nbsp;{{uname}}
                 </p>
 							</div>
 
 							<div class="card-divider">
-								<b>{{email}}</b>
+								<b>Contact: </b> &nbsp; {{email}}
 							</div>
 						</div>
 					</div>
