Modified passport signup success status

--- a/views/users/signin.hbs
+++ b/views/users/signin.hbs
@@ -9,6 +9,17 @@
 	{{/each}}
 {{/if}}
 
+{{#if success}}
+	{{#each success}}
+		<div class="success callout" data-closable style="margin:10px;">
+			<p>{{.}}</p>
+			<button class="close-button" aria-label="Dismiss alert" type="button" data-close>
+			 <span aria-hidden="true">&times;</span>
+			</button>
+		</div>
+	{{/each}}
+{{/if}}
+
 <div class="form row" style="margin:25px; padding:10px;">
 	<h3 class="header">Signin</h3>
 	<form method="POST" action="/users/signin">
